NYCCHKBK-3849 - Fixed processing icon spacing with buttons for create alerts

--- a/source/webapp/sites/all/themes/checkbook3/css/global.css
+++ b/source/webapp/sites/all/themes/checkbook3/css/global.css
@@ -1010,7 +1010,7 @@ div.bottomContainer{
     margin: 0px;
 }
 
-div.create-alert-submit #edit-next-submit {
+div.create-alert-submit .form-submit {
     margin-left: 7px;
 }
 
